# CloudWord

./: CMakeLists.txt  README.md
include/: util.h
resources/: word.txt
src/: main.cpp
src/font/: font.cpp  font.h
